--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+				<meta name="viewport" content="width=device-width, initial-scale=1" />
+				<meta name="theme-color" content="#000000"/>
         <link rel="stylesheet" href="/css/normalize-8.0.1.min.css" />
         <link rel="stylesheet" href="/css/main.css" />
         <title>{{if .Title}}{{.Title}} - {{end}}{{.SiteTitle}}</title>
