--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -17,6 +17,7 @@
 				<div class="nav-left">
 					<a href="/" class="nav-title">
             <span class="nav-extra">{{.SiteTitle}}</span></a>
+          <a href="/tickets">Tickets</a>
 				</div>
 			</div>
 			<div class="content">
