--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -1,15 +1,17 @@
 {{template "base/head" .}}
 <div class="content">
 	{{template "partials/flash" .}}
-	<h2>{{.Post.Title}}</h2>
-	<p><small class="sgrey">{{.Post.Upvotes}} Upvotes {{CalcDurationShort .Post.CreatedUnix}} ago
-	{{if not .Resolved}}<a href="/tickets/{{.Post.PostID}}/upvote">
+	<h2>{{.Ticket.Title}}</h2>
+	<p><small class="sgrey">{{.Ticket.Upvotes}} Upvotes {{CalcDurationShort .Ticket.CreatedUnix}} ago
+	{{if not .Resolved}}<a href="/tickets/{{.Ticket.TicketID}}/upvote">
 	{{if .Upvoted}}[unvote]{{else}}[upvote]{{end}}</a>{{end}}
 
-	{{if .IsAdmin}}<a href="/tickets/{{.Post.PostID}}/edit">[edit]</a>
-  <a href="/tickets/{{.Post.PostID}}/del">[delete]</a>{{end}}</p>
+	{{if .IsAdmin}}<a href="/tickets/{{.Ticket.TicketID}}/edit">[edit]</a>
+  <a href="/tickets/{{.Ticket.TicketID}}/del">[delete]</a>{{end}}</p>
 
 	<div class="post">{{.FormattedPost}}</div>
+
+  <h3>Comments</h3>
 	{{if not .Resolved}}<form method="post">
 		<div class="col-5">
 		<div class="form-group">
@@ -25,7 +27,7 @@
 	{{range .Post.Comments}}
 	<div class="comment"><p id="c-{{.CommentID}}"><small class="sgrey">
       {{.PosterID}} {{CalcDurationShort .CreatedUnix}} ago
-      {{if .IsAdmin }}<a href="/tickets/{{$.Post.PostID}}/del/{{.CommentID}}">[delete]</a>{{end}}
+      {{if .IsAdmin }}<a href="/tickets/{{$.Ticket.TicketID}}/del/{{.CommentID}}">[delete]</a>{{end}}
 	</small></p>
 	<div>{{.FormattedText}}</div></div>
 	{{end}}
