--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {{template "base/head" .}}
 {{if .IsHome}}
 {{if .Config.ShowNotice}}
-<div class="alert {{.Config.NoticeColour}}">
+<div class="alert {{if eq .Config.NoticeColour ""}}alert-grey{{end}}{{.Config.NoticeColour}}">
   <p class="alert-title">{{if eq .Config.NoticeTitle ""}}Update{{end}} {{.Config.NoticeTitle}}</p>
   <p>{{.Config.NoticeText}}</p>
   {{if .Config.NoticeLink}}<a class="btn" href="{{.Config.NoticeLink}}">Read
@@ -25,7 +25,7 @@
 <div class="card-grid">
   <!-- display top 3 tickets -->
   <div class="card">
-    <a>Operating Systems Marking</a> 
+    <a>Operating Systems Marking</a>
     <p><i>F29OC</i></p>
     <p>Issues regarding the way in which F29OC has been marked</p>
     <a class="btn" href="">View Ticket</a>
@@ -34,13 +34,13 @@
 
 <h3>Your Class Representatives</h3>
 <div class="card-grid">
-{{ range .Config.ClassReps }}
-<div class="card">
-  <p class="cardTitle">{{.Name}}</p>
-  <p><i>{{.Course}}</i></p>
-  <p><a href="mailto:{{.Email}}" class="btn">Contact</a></p>
-</div>
-{{end}}
+  {{ range .Config.ClassReps }}
+  <div class="card">
+    <p class="cardTitle">{{.Name}}</p>
+    <p><i>{{.Course}}</i></p>
+    <p><a href="mailto:{{.Email}}" class="btn">Contact</a></p>
+  </div>
+  {{end}}
 </div>
 
 {{end}}
