Add basic complaints page

--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -18,6 +18,7 @@
 					<a href="/" class="nav-title">
             <span class="nav-extra">{{.SiteTitle}}</span></a>
           <a href="/tickets">Tickets</a>
+          <a href="/complaints">Complaints</a>
 				</div>
 			</div>
 			<div class="content">
