--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-				<meta name="viewport" content="width=device-width, initial-scale=1" />
-				<meta name="theme-color" content="#000000"/>
-        <link rel="stylesheet" href="/css/normalize-8.0.1.min.css" />
-        <link rel="stylesheet" href="/css/main.css" />
-        <title>{{if .Title}}{{.Title}} - {{end}}{{.SiteTitle}}</title>
-		{{if .Description}}
-		<meta name="description" content="{{.Description}}" />{{end}}
-        <link rel="icon" href="/favicon.ico" />
-	</head>
-	<body>
-		<div class="container">
-			<div class="nav">
-				<div class="nav-left">
-					<a href="/" class="nav-title">
-            <span class="nav-extra">{{.SiteTitle}}</span></a>
-          <a href="/tickets">Tickets</a>
-				</div>
+
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<link rel="stylesheet" href="/css/normalize-8.0.1.min.css" />
+	<link rel="stylesheet" href="/css/main.css" />
+	<title>{{.Title}}</title>
+	{{if .Description}}
+	<meta name="description" content="{{.Description}}" />{{end}}
+	<link rel="icon" href="/favicon.ico" />
+</head>
+
+<body>
+	<div class="container">
+		<div class="nav">
+			<div class="nav-left">
+				<a href="/" class="nav-title">
+					<span class="nav-extra {{if eq .Title "Class Reps"}}active{{end}}">{{.SiteTitle}}</span></a>
+				<a class="{{if eq .Title "Tickets"}}active{{end}}" href="/tickets">Tickets</a>
 			</div>
-			<div class="content">
+		</div>
+		<div class="content">
