Put content in container.

--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -2,6 +2,7 @@
 		<div class="footer">
 			<p>This website is unaffiliated with Heriot-Watt University.</p>
 		</div>
+    </div>
 	</body>
 </html>
 
