--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -19,8 +19,8 @@
 			<div class="nav-left">
 				<a href="/" class="nav-title">
 					<span class="nav-extra {{if .IsHome}}active{{end}}">{{.SiteTitle}}</span></a>
-				<a class="{{if eq .Title "Tickets"}}active{{end}}" href="/tickets">Tickets</a>
-				<a class="{{if eq .Title "Complaints"}}active{{end}}" href="/complaints">Complaints</a>
+				<a class="{{if .IsTickets}}active{{end}}" href="/tickets">Tickets</a>
+				<a class="{{if .IsComplaints}}active{{end}}" href="/complaints">Complaints</a>
 			</div>
 		</div>
 	</div>
