--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 <div class="card-grid">
   <!-- display top 3 tickets -->
   <div class="card">
-    <a>Operating Systems Marking</a>
+    <p class="heading">Operating Systems Marking</p>
     <p><i>F29OC</i></p>
     <p>Issues regarding the way in which F29OC has been marked</p>
     <a class="btn" href="">View Ticket</a>
