Added information about courses and lecturers Added lecturers and courses pages Added routes to courses page (lecturers need doing)

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <div class="card-grid">
   {{ range .Config.Links }}
   <div class="card">
-    <a href="{{.Link}}" target="_blank">{{.Name}}</a>
+    <a href="{{.Link}}">{{.Name}}</a>
   </div>
   {{end}}
 </div>
