--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,11 +59,11 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
+  margin: 25px 0 0 0;
 }
 
 p {
-  margin: 10px 0;
+  margin: 0 0 15px 0;
 }
 
 .card p i {
@@ -78,6 +78,10 @@ p {
 
 .active {
   color: #fff !important;
+}
+
+.noTopMargin {
+  margin-top: 0 !important;
 }
 
 .noBottomMargin {
@@ -351,9 +355,7 @@ label {
   body {
     font-size: 1em;
   }
-  p {
-    margin: 0;
-  }
+
   textarea {
     max-width: 100%;
   }
