--- a/templates/base/footer.html
+++ b/templates/base/footer.html
@@ -1,8 +1,12 @@
-		</div>
-		<div class="footer">
-			<p>This website is unaffiliated with Heriot-Watt University.</p>
-		</div>
-    </div>
-	</body>
-</html>
+</div>
+<br>
+<br>
+<br>
+<div class="footer">
+	<a href="/privacy">Privacy</a>
+	<p>This website is unaffiliated with Heriot-Watt University.</p>
+</div>
+</div>
+</body>
 
+</html>
