Added courses to courses page + <br> between message and "markdown supported" in complaints page - <div> wrapper for <a> in Links & Resources > CSS rule regarding columns on mobile devices. No margin left and box-sizing: border-box > Privacy policy
Key
+ Added
- Removed
> Changed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -375,6 +375,8 @@ label {
 @media only screen and (max-width: 860px) {
   [class*="col-"] {
     width: 100%;
+    box-sizing: border-box;
+    margin-left: 0;
   }
 
   .card-grid {
