--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -3,7 +3,7 @@
 <p><i>Updated: [placeholder]</i></p>
 
 <h2>Information We Collect</h2>
-<p>To facilitate the ability of users to vote and create discussions, we create a unique 'voter ID'
+<p>To facilitate the ability of users to vote, we create a unique 'voter ID'
   which is generated using the following information:
 <ul>
   <li>IP address</li>
@@ -18,21 +18,19 @@ information in order to roughly identify a user, mitigating potential abuses of 
 service.
 </p>
 
+<p>On the <a href="/complaints">complaints page</a> users may leave an email address if further correspondence is required.</p>
+
 <h2>Cookies</h2>
 <p>
-  Session cookies are used to generate a temporary username, allowing a user to comment anonymously. This session ID
+  Session cookies ("hithereimacookie") are used to generate a temporary username, allowing a user to comment anonymously and create
+  discussions. This session ID
   expires every 24 hours. No other information is stored in the browser.
 </p>
 
 <p>Examples of a session account:</p>
 
-<div class="card">
+<div class="card col-4">
   <h3 class="noTopMargin">Grateful Golang</h3>
-  <p>Session ID: [placeholder]</p>
-</div>
-
-<div class="card">
-  <h3 class="noTopMargin">Hateful Haskell</h3>
   <p>Session ID: [placeholder]</p>
 </div>
 
@@ -40,6 +38,7 @@ service.
 There's only one party happening here. No information is shared with third parties.
 
 <h2>Changes</h2>
-<p>We, the current class representatives, reserve the right to make any changes to this privacy policy. As we do not collect emails, notice will be given as an alert on the <a href="/">homepage</a>.</p>
+<p>We, the current class representatives, reserve the right to make any changes to this privacy policy. Notice will be
+  given as an alert on the <a href="/">homepage</a>.</p>
 
 {{template "base/footer" .}}
