--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -18,21 +18,28 @@ information in order to roughly identify a user, mitigating potential abuses of 
 service.
 </p>
 
-<p>On the <a href="/complaints">complaints page</a> users may leave an email address if further correspondence is required.</p>
+<p>On the <a href="/complaints">complaints page</a> users may leave an email address if further correspondence is
+  required.</p>
 
 <h2>Cookies</h2>
 <p>
-  Session cookies ("hithereimacookie") are used to generate a temporary username, allowing a user to comment anonymously and create
+  Session cookies ("hithereimacookie") are used to generate a temporary username, allowing a user to comment anonymously
+  and create
   discussions. This session ID
-  expires every 24 hours. No other information is stored in the browser.
+  expires every 24 hours.
 </p>
 
 <p>Examples of a session account:</p>
 
 <div class="card col-4">
   <h3 class="noTopMargin">Grateful Golang</h3>
-  <p>Session ID: [placeholder]</p>
+  <p>Session ID: c2c1390516e18d14</p>
 </div>
+
+<p>We use <a href="https://www.cloudflare.com/" target="_blank">Cloudflare</a> to provide enhanced security to our
+  service, thus you may notice another cookie called <a
+    href="https://support.cloudflare.com/hc/en-us/articles/200170156-Understanding-the-Cloudflare-Cookies"
+    target="_blank">__cfduid</a> which is their anonymised cookie. This does not, however, track you between sites.</p>
 
 <h2>Third Parties</h2>
 There's only one party happening here. No information is shared with third parties.
