Added more information to class reps and changed lecturers N/A to unknown

--- a/templates/courses.html
+++ b/templates/courses.html
@@ -1,12 +1,12 @@
 {{template "base/head" .}}
 <div class="content">
 	{{template "partials/flash" .}}
-	<h1>Courses</h1>
+	<h1 class="noTopMargin">{{.Title}}</h1>
 
 	<div class="card-grid">
 		{{ range .Courses }}
 		<div class="card">
-			<a href="">{{.Name}}</a>
+			<h3 class="noTopMargin">{{.Name}}</h3>
 			<p>{{.Code}}</p>
 			{{range $index, $fields := .DegreeCode}}
 			<p><i>{{$fields}}</i></p>
