--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -1,6 +1,6 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
-<h2>Submit a Complaint</h2>
+<h1 class="noTopMargin">Submit a Complaint</h1>
 <div class="col-6">
 	<p>You to submit a private complaint directly to the class
 		representatives. If you'd like to make a public ticket, <a href="/tickets">visit the tickets page</a>.
