--- a/templates/lecturers.html
+++ b/templates/lecturers.html
@@ -1,18 +1,16 @@
 {{template "base/head" .}}
-<div class="content">
-  {{template "partials/flash" .}}
-  <h1 class="noTopMargin">{{.Title}}</h1>
+{{template "partials/flash" .}}
+<h1 class="noTopMargin">{{.Title}}</h1>
 
-  <div class="card-grid">
-    {{ range .Lecturers }}
-    <div class="card">
-      <h3 class="noTopMargin">{{.Name}}</h3>
-      <a href="{{.Email}}">{{.Email}}</a>
-      <p>{{.Office}}</p>
-      <p>{{.Time}}</p>
-      <p><i>Last Updated: {{.Updated}}</i></p>
-    </div>
-    {{end}}
+<div class="card-grid gridFullWidth">
+  {{ range .Lecturers }}
+  <div class="card">
+    <h3 class="noTopMargin">{{.Name}}</h3>
+    <a href="{{.Email}}">{{.Email}}</a>
+    <p>{{.Office}}</p>
+    <p>{{.Time}}</p>
+    <p><i>Last Updated: {{.Updated}}</i></p>
   </div>
+  {{end}}
 </div>
 {{template "base/footer" .}}
