--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -1,6 +1,5 @@
 {{template "base/head" .}}
-<h1>Privacy Policy</h1>
-<p><i>Updated: [placeholder]</i></p>
+<h1 class="noTopMargin">Privacy Policy</h1>
 
 <h2>Information We Collect</h2>
 <p>To facilitate the ability of users to vote, we create a unique 'voter ID'
@@ -47,5 +46,8 @@ There's only one party happening here. No information is shared with third parti
 <h2>Changes</h2>
 <p>We, the current class representatives, reserve the right to make any changes to this privacy policy. Notice will be
   given as an alert on the <a href="/">homepage</a>.</p>
+<br>
+<p><i>Updated: 24/07/20</i></p>
+
 
 {{template "base/footer" .}}
