--- a/templates/new-ticket.html
+++ b/templates/new-ticket.html
@@ -1,23 +1,21 @@
 {{template "base/head" .}}
-<div class="content">
 	{{template "partials/flash" .}}
-	<h2>Post a new ticket</h2>
+	<h2 class="noTopMargin">Post a New Ticket</h2>
 	<form method="post">
 		<div class="col-10">
 			<div class="form-group">
-				<label for="title">Title</label>
+				<label for="title"><h3>Title</h3></label>
 				<input class="form-item" type="text" id="title" name="title" required="1"
 				autofocus="1"{{if .ptitle}} value="{{.ptitle}}"{{end}} />
 			</div>
 			<div class="form-group">
-				<label for="text">Body</label>
-				<textarea class="form-item" id="text" name="text" cols="70" rows="20" required="1">{{if .ptext}}{{.ptext}}{{end}}</textarea> 
-				<p class="muted-text">Markdown and HTML is supported.</p>
+				<label for="text"><h3>Body</h3></label>
+				<textarea class="form-item" id="text" name="text" cols="70" rows="20" required="1" placeholder="Markdown and HTML are supported">{{if .ptext}}{{.ptext}}{{end}}</textarea> 
 			</div>
 		</div>
 		<input type="hidden" name="_csrf" value="{{.csrf_token}}" />
 		<button type="submit" class="btn">Submit ticket</button>
-    <p><small>Ticket will be posted publicly and anonymously.</small></p>
+		<br><br>
+    <p><i>Ticket will be posted publicly and anonymously.</i></p>
 	</form>
-</div>
 {{template "base/footer" .}}
