--- a/public/css/main.css
+++ b/public/css/main.css
@@ -266,7 +266,7 @@ code, pre {
   background-color: var(--danger-bg);
 }
 
-textarea, input {
+textarea, input, select {
   border-radius: 0;
   border: #ccc 1px solid;
   padding: 5px;
