Improve wording of policies.

--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -5,7 +5,9 @@
 	<p>You to submit a private complaint directly to the class
 		representatives. If you'd like to make a public ticket, <a href="/tickets">visit the tickets page</a>.
 	</p>
-	<p>If you choose to provide an email then you consent to us replying to your message.</p>
+	<p>We may reply or ask further clarifications if you provide your email
+  address. However, your identity will remain private and will not be revealed
+  to the university, unless you specify otherwise.</p>
 </div>
 <form method="post">
 	<div class="col-10">
