--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -8,27 +8,24 @@
   <li>IP address</li>
   <li>User-agent header</li>
   <li>Random number generated at that instance <a href="https://en.wikipedia.org/wiki/Pepper_(cryptography)"
-      target="_blank">(pepper)</a>. This is not linked to the session ID</li>
+      target="_blank">(pepper)</a>.</li>
 </ul>
 
-A <a href="https://en.wikipedia.org/wiki/Cryptographic_hash_function" target="_blank">cryptographic hash</a> is created
-using this
-information in order to roughly identify a user, mitigating potential abuses of the anonymity granted through the
-service.
-</p>
+An irreversable <a href="https://en.wikipedia.org/wiki/Cryptographic_hash_function"
+  target="_blank">cryptographic hash</a> is created using this information in
+order to roughly identify a user, mitigating potential abuses of the anonymity
+granted through the service. This hash is not linked with your session.</p>
 
-<p>On the <a href="/complaints">complaints page</a> users may leave an email address if further correspondence is
-  required.</p>
+<p>On the <a href="/complaints">complaints page</a>, users may leave an email
+address if further correspondence is required. Complaints could not be linked
+with the session, or any post under the ticketing system.</p>
 
 <h2>Cookies</h2>
-<p>
-  Session cookies ("hithereimacookie") are used to generate a temporary username, allowing a user to comment anonymously
-  and create
-  discussions. This session ID
-  expires every 24 hours.
-</p>
+<p>Session cookies ("hithereimacookie") are used to generate a temporary
+username, allowing a user to comment anonymously and create discussions. These
+sessions are set to expire in one month.</p>
 
-<p>Examples of a session account:</p>
+<p>Examples of data stored on a session:</p>
 
 <div class="card col-4">
   <h3 class="noTopMargin">Grateful Golang</h3>
@@ -41,13 +38,14 @@ service.
     target="_blank">__cfduid</a> which is their anonymised cookie. This does not, however, track you between sites.</p>
 
 <h2>Third Parties</h2>
-There's only one party happening here. No information is shared with third parties.
+<p>There's only one party happening here. No information is shared with third
+parties.</p>
 
 <h2>Changes</h2>
 <p>We, the current class representatives, reserve the right to make any changes to this privacy policy. Notice will be
   given as an alert on the <a href="/">homepage</a>.</p>
 <br>
-<p><i>Updated: 24/07/20</i></p>
+<p><i>Updated: 25/07/20</i></p>
 
 
 {{template "base/footer" .}}
