--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -5,12 +5,18 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="theme-color" content="#000000" />
+	<meta name="msapplication-navbutton-color" content="#000000">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<link rel="stylesheet" href="/css/normalize-8.0.1.min.css" />
 	<link rel="stylesheet" href="/css/main.css" />
+	<link rel="shortcut icon" href="/portal.png" />
+	<link rel="icon" sizes="400x400" href="/portal.png">
+	<link rel="apple-touch-icon" href="/portal.png" />
 	<title>{{.Title}}</title>
 	{{if .Description}}
 	<meta name="description" content="{{.Description}}" />{{end}}
-	<link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="/favicon.png" />
 </head>
 
 <body>
