--- a/templates/complaints.html
+++ b/templates/complaints.html
@@ -44,8 +44,9 @@
 		</div>
 	</div>
 	<input type="hidden" name="_csrf" value="{{.csrf_token}}" />
+	<br>
+  <p>You will confirm the recipients next.</p>
 	<button type="submit" class="btn">Continue</button>
-  <p><small>You will confirm the recipients next.</small></p>
 </form>
 </div>
 {{template "base/footer" .}}
