--- a/templates/complaints-confirm.html
+++ b/templates/complaints-confirm.html
@@ -10,7 +10,7 @@
   <p><b>Contact Email</b>: {{if .Email}}{{.Email}}{{else}}<i>Not
     given</i>{{end}}</p>
   <p><b>Message</b>:</p>
-  <p>{{.Message}}</p>
+  <p><pre>{{.Message}}</pre></p>
 </div>
 <form method="post">
 	<input type="hidden" name="_csrf" value="{{.csrf_token}}" />
